# velion-observations-api

./: .env.example  CHANGELOG.MD  README.md  pyproject.toml
app/: config.py  exceptions.py  logging_config.py  main.py  middleware.py
app/api/: error_handlers.py  observations.py
app/domain/: models.py  response.py
app/sources/: base.py  factory.py  in_memory_source.py
app/sources/bigquery/: __init__.py  client.py  mapping.py  observation_source.py
app/sources/mock_legacy/: __init__.py  loader.py  mapping.py  source.py
data/: mock_legacy_fixtures.json
docs/: 01-architecture.MD  02-api-contract.md  03-bigquery.md  04-add-source.md  README.MD
sql/: analytics_query.sql  ddl_demo.sql
