[project]
name = "velion-observations-api"
version = "0.1.0"
description = "Test technique Velion — API d'abstraction multi-sources pour observations terrain (USDA NASS)"
requires-python = ">=3.12"
authors = [
    { name = "Fanantenana Randriamahefa", email = "fanantenanaran@gmail.com" }
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "google-cloud-bigquery>=3.18",
    "python-dotenv>=1.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # géré par le formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
